$Id: NEWS,v 1.19 1999-12-28 07:45:13 macgyver Exp $

1.2.0pre10 - Released: ???
--------------------------
- sendfile() handles errors and non-optimal conditions The Right Way(tm).

- install_group works right in warped cases of having more than one GID 0
  group defined.  No, don't ask. :)

- sendfile() doesn't log spurious messages unless it's in debug mode now.

- A meaningful error is now generated with bad group files.

- Complex group permissions work correctly now, where they did not in a
  rare case.

- Updated included version of mod_ldap.

- Bandwidth and sendfile() use are now mutually exclusive.

- Corrected minor log issues.

- Fixed various compilation issues on various platforms (isn't this vague :)).

- More informative error messages.

- Minor semi-Y2K issue in mod_readme fixed (don't ask...look at the code :)).

1.2.0pre9 - Released: 10/27/99
------------------------------
- New support for BSD sendfile() semantics.

- sendfile() deprecates politely on Linux 2.0.x.

- AuthPAMAuthoritative now defaults to False.  This should clear up any
  confusion on using PAM with AuthUserFile and friends.

- Removed Bandwidth from the documentation.

- Fixed a rare segfault in mod_auth.

- Logging has changed slightly to be more informative and more consistent.
    All messages that get logged are now preceded with
    <virtualhost> (remote host[remote ip]).

- mod_ldap for authentication against LDAP directories is now in place.

- ftpwho/ftpcount -- a grammatical error corrected, and they now build
    as seperate binaries.

- Fixed the 'no names, just UIDs' bug.

- Added genuser.pl to facilitate AuthUserFile entry creation.

- Umask now takes an optional second argument, specifying a directory umask.

- Work around FreeBSD's broken setpassent(), and a new option to override
    this in fixed versions of FreeBSD's libc (--enable-force-setpassent).

- Generate RPMs for both inetd and standalone versions of ProFTPD.
